# hetero_parallel_alpr

./: CMakeLists.txt  Heterogeneous Parallelized Automatic Number Plate Recognition System.ppt  README.md  ~$Heterogeneous Parallelized Automatic Number Plate Recognition System.ppt
demo/: tesseract_demo  tesseract_demo.cpp
src/: CMakeLists.txt  create_cuda.cu  main.cpp
src/misc_utilities/: CMakeLists.txt
src/openalpr/: CMakeLists.txt  alpr_impl.cpp  binarize_sauvola.cu  binarize_wolf.cpp  binarize_wolf.h  config.cpp  config.h  create_cuda.cu  licenseplatecandidate.cpp  utility.cpp  utility.h
src/openalpr/detection/: detectorcpu.cpp  detectorcuda.cpp  detectorcuda.h  detectorfactory.cpp
src/openalpr/ocr/: ocr.cpp  tesseract_ocr.cpp  tesseract_ocr.h
src/openalpr/ocr/segmentation/: charactersegmenter.cpp
src/openalpr/textdetection/: characteranalysis.cpp  platemask.cpp
src/tests/: CMakeLists.txt
